# momentum

./: .env  .env_meanrev  .env_meanrev.example  .gitignore  MANIFEST.in  README.txt  README_Momentum.md  README_STEP03.md  README_STEP06.md  README_STEP07.md  README_STEP08.md  README_STEP08a.md  README_STEP08b.md  README_STEP08c.md  README_STEP09.txt  README_STEP09A.txt  README_STEP10.txt  README_STEP10a.txt  README_STEP11.txt  README_e2e_sim_dryrun.md  README_step02.md  env  requirements.lock.txt  requirements.txt  sitecustomize.py
momentum/: .env.example  bootstrap_venv.sh  pyproject.toml
momentum/config/: minlot.py
momentum/docs/: README_AUTO_LIMIT_AND_DEFENSIVE_FIX.md  README_ENV_RISK.md  README_KRAKEN_BALANCES_PATCH.md  README_RISK_EQUITY_FIX.md  README_STRICT_NOTIONAL_CAP.md  README_WS_EQUITY.md  README_def_fix2.md
momentum/domain/: types.py
momentum/funnel/: exclude_hook.py  metrics.py  tactics.py
momentum/janitor/: service.py
momentum/kraken/: apply_balances_patch.py  rest_client.py
momentum/l2_services/: config.py
momentum/orders/: executor.py
momentum/ranker/: selector.py
momentum/scripts/: _e2e_helpers.py  bracketd.py  bracketd.py.bak.1758955899  bracketd.py.bak.1758956010  build_universe.py  e2e_funnel_rightside.py  e2e_funnel_rightside_v2.py  e2e_sim_dryrun.py  e2e_sim_dryrun_risk.py  e2e_sim_live.py  exec_bracket_v2.py  exec_order.py  exec_order.py.bak.20250922T162923Z  exec_order.py.bak.20250922T163109Z  exec_order.py.bak.20250922T163217Z  exec_order_live_min.py  exec_oto_plan.py  funnel_rank.py  funnel_runner_dryrun.py  metrics_http.py  (+13 more)
(+92 files in other folders)
